# BookScan

./: Cargo.toml  docker-compose.yml
scripts/: init.sql
src/: db.rs  main.rs  types.rs
src/routes/: graphql.rs
