[package]
name = "BookScan"
version = "0.1.0"
edition = "2021"

[dependencies]
juniper = "0.16.1"
juniper_rocket = "0.9.0"
rocket = "0.5.1"

[dependencies.sqlx]
version = "0.8"
features = [ "runtime-async-std", "tls-native-tls", "postgres"]

[dependencies.async-std]
version = "1.13.0"
features = ["attributes"]